# puniyu

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  .release-please-config.json  .release-please-manifest.json  .release.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md  clippy.toml  justfile  release-plz.toml  sonar-project.properties
.cargo/: config.toml  (+1 more)
adapters/console/: CHANGELOG.md  Cargo.toml
adapters/console/src/: api.rs  common.rs  lib.rs
adapters/puniyu_adapter_console/: CHANGELOG.md  Cargo.toml  README.md
adapters/puniyu_adapter_console/src/: api.rs  bot.rs  common.rs  input.rs  lib.rs  runtime.rs
adapters/puniyu_adapter_server/: CHANGELOG.md  Cargo.toml
adapters/puniyu_adapter_server/src/: api.rs  bot.rs  error.rs  lib.rs  server.rs
crates/puniyu/: Cargo.toml
crates/puniyu/src/: app.rs  lib.rs  logo.rs  runtime.rs
crates/puniyu_account/: CHANGELOG.md  Cargo.toml  README.md
crates/puniyu_account/src/: lib.rs
crates/puniyu_account/tests/: account_builder.rs  account_info.rs  account_macro.rs
crates/puniyu_adapter/: CHANGELOG.md  Cargo.toml  README.md
crates/puniyu_adapter/src/: account.rs  api.rs  bot.rs  builder.rs  contact.rs  context.rs  element.rs  event.rs  info.rs  lib.rs  macros.rs  message.rs  prelude.rs  registry.rs  runtime.rs  sender.rs  server.rs  store.rs  types.rs  version.rs
crates/puniyu_adapter/tests/: adapter_registry.rs  adapter_trait.rs  adapter_types.rs
crates/puniyu_adapter_api/: CHANGELOG.md  Cargo.toml  README.md
crates/puniyu_adapter_api/src/: account.rs  error.rs  friend.rs  group.rs  inner.rs  lib.rs  message.rs  runtime.rs  types.rs
crates/puniyu_adapter_api/tests/: api.rs
crates/puniyu_adapter_builder/: Cargo.toml
crates/puniyu_adapter_builder/src/: account.rs  lib.rs  types.rs
crates/puniyu_adapter_core/: CHANGELOG.md  Cargo.toml  README.md
crates/puniyu_adapter_core/src/: api.rs  error.rs  lib.rs  registry.rs  types.rs
crates/puniyu_adapter_core/tests/: adapter_api.rs  adapter_basic.rs  registry.rs  types_account.rs  types_info.rs  types_message.rs
crates/puniyu_adapter_registry/: Cargo.toml
crates/puniyu_adapter_registry/src/: error.rs  lib.rs  store.rs
crates/puniyu_adapter_runtime/: CHANGELOG.md  Cargo.toml  README.md
crates/puniyu_adapter_runtime/src/: lib.rs  runtime.rs
crates/puniyu_adapter_types/: CHANGELOG.md  Cargo.toml  README.md
crates/puniyu_adapter_types/src/: connection.rs  lib.rs  platform.rs  protocol.rs  standard.rs  types.rs
crates/puniyu_adapter_types/tests/: types.rs
crates/puniyu_api/: CHANGELOG.md  Cargo.toml  README.md
crates/puniyu_api/src/: account.rs  bot.rs  command.rs  config.rs  contact.rs  context.rs  element.rs  error.rs  event.rs  handler.rs  hook.rs  lib.rs  message.rs  middleware.rs  path.rs  plugin.rs  segment.rs  sender.rs  server.rs  version.rs
crates/puniyu_bot/: CHANGELOG.md  Cargo.toml  README.md
crates/puniyu_bot/src/: error.rs  lib.rs  macros.rs  registry.rs  types.rs
crates/puniyu_bot/tests/: bot_basic.rs  bot_registry.rs  bot_types.rs
crates/puniyu_build/: CHANGELOG.md  Cargo.toml  README.md
crates/puniyu_build/src/: lib.rs
crates/puniyu_builder/: CHANGELOG.md  Cargo.toml  README.md
crates/puniyu_builder/src/: account.rs  adapter.rs  command.rs  lib.rs  plugin.rs  task.rs
crates/puniyu_bus/: CHANGELOG.md  Cargo.toml
crates/puniyu_bus/src/: lib.rs
punicore/: Cargo.toml
punicore_core/: Cargo.toml
punicore_core/src/: lib.rs  logger.rs
punicore_utils/: Cargo.toml
punicore_utils/src/: lib.rs
punicore_utils/src/system/: system_info.rs
punicore_utils/src/utils/: number.rs
punicore_utils/tests/: system_info_test.rs  utils_number_test.rs
puniyu/: CHANGELOG.md  Cargo.toml  build.rs  justfile
puniyu/src/: config.rs  load.rs  logger.rs  main.rs  unload.rs
puniyu/src/config/: logger.rs
puniyu_adapter/: CHANGELOG.md  Cargo.toml  README.md
puniyu_adapter/src/: lib.rs  prelude.rs
puniyu_binaries/: .gitignore  Cargo.toml  build.rs  justfile
puniyu_binaries/src/: load.rs  log.rs  main.rs
puniyu_core/: CHANGELOG.md  Cargo.toml  README.md  build.rs
puniyu_core/src/: adapter.rs  app.rs  bot.rs  common.rs  config.rs  error.rs  event.rs  lib.rs  logger.rs  message.rs  path.rs  plugin.rs  system.rs  version.rs
puniyu_core/src/adapter/: info.rs  mod.rs
puniyu_core/src/common/: mod.rs
puniyu_core/src/config/: app.rs  bot.rs  group.rs
puniyu_core/src/core/: listeners.rs  mod.rs
puniyu_core/src/event/: account.rs  base.rs  contact.rs  key.rs  matcher.rs  message.rs  mod.rs  sender.rs
puniyu_core/src/message/: element.rs  mod.rs  segment.rs
puniyu_core/src/render/: mod.rs
puniyu_core/tests/: bot.rs  config.rs
puniyu_logger/: Cargo.toml
puniyu_logger/src/: lib.rs
puniyu_logger/tests/: logger_test.rs
puniyu_macro/: Cargo.toml
puniyu_macro/src/: lib.rs  utils.rs
puniyu_plugin/: CHANGELOG.md  Cargo.toml  README.md
puniyu_plugin/src/: lib.rs  plugin.rs  prelude.rs  registry.rs
puniyu_plugin/src/task/: registry.rs
puniyu_registry/: Cargo.toml  README.md
puniyu_registry/src/: adapter.rs  bot.rs  error.rs  lib.rs  library.rs  listener.rs  logger.rs  manger.rs  plugin.rs  utils.rs  version.rs
puniyu_registry/src/adapter/: builder.rs  manger.rs  registry.rs  store.rs
puniyu_registry/src/bot/: registry.rs
puniyu_registry/src/plugin/: builder.rs  command.rs  info.rs  library.rs  manager.rs  manger.rs  mod.rs  registry.rs  store.rs  task.rs
puniyu_registry/src/task/: command.rs  mod.rs  registry.rs
puniyu_utils/: Cargo.toml  README.md
puniyu_utils/src/: adapter.rs  contact.rs  error.rs  event.rs  lib.rs  message.rs  path.rs  sender.rs  template.rs  utils.rs
puniyu_utils/src/adapter/: account.rs  builder.rs  info.rs  types.rs
puniyu_utils/src/config/: json.rs  mod.rs  toml.rs  yaml.rs
puniyu_utils/src/event/: bus.rs  handler.rs  matcher.rs  message.rs
puniyu_utils/src/message/: element.rs  segment.rs
puniyu_utils/src/sender/: friend.rs  group.rs
puniyu_utils/src/system/: system_info.rs
puniyu_utils/tests/: contact.rs  utils_number_test.rs
(+1181 files in other folders)
