[workspace]
members = ["crates/*", "puniyu"]
resolver = "2"

[workspace.lints.clippy]
unwrap_used = "deny"

[workspace.package]
authors = ["wuliya <3369906077@qq.com>"]
license = "LGPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/puniyu/puniyu"
repository = "https://github.com/puniyu/puniyu"
edition = "2024"
rust-version = "1.88.0"

[workspace.dependencies]
log = { version = "0.4.33" }
clap = { version = "4.5", default-features = false, features = ["std"] }
thiserror = { version = "2.0.18" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150" }
strum = { version = "0.28.0", features = ["derive"] }
bytes = { version = "1.12.0" }
toml = { version = "1.1.2" }
jiff = { version = "0.2.29", features = ["serde"] }
tokio = { version = "1.47.1" }
smol_str = { version = "0.3.6", features = ["serde"] }

puniyu_core = { version = "0.9.2" }
puniyu_logger = { version = "0.7.5" }

puniyu_cooldown = { version = "0.9.0", path = "./crates/puniyu_cooldown" }
puniyu_macros = { version = "0.9.0", path = "./crates/puniyu_macros" }


[profile.release]
lto = "fat"
opt-level = "z"
incremental = false

[profile.dev]
lto = false
opt-level = 1
incremental = true
