[workspace]
members = ["crates/*", "handlers/*", "loaders/*", "puniyu_binaries"]
resolver = "2"

[workspace.lints.clippy]
unwrap_used = "deny"

[workspace.package]
authors = ["wuliya <3369906077@qq.com>"]
license = "LGPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/puniyu/puniyu"
repository = "https://github.com/puniyu/puniyu"
edition = "2024"
rust-version = "1.97.0"

[workspace.dependencies]
log = { version = "0.4.33" }
thiserror = { version = "2.0.18" }
async-trait = { version = "0.1.89" }
semver = { version = "1.0.28", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150" }
serde_repr = { version = "0.1.20" }
smol_str = { version = "0.3.6", features = ["serde"] }
bon = { version = "3.9.3" }
strum = { version = "0.28.0", features = ["derive"] }
derive_more = { version = "2.1.1" }
bytes = { version = "1.12.1" }
ecow = { version = "0.3.0", features = ["serde"] }
toml = { version = "1.1.2" }
jiff = { version = "0.2.31", features = ["serde"] }
tokio = { version = "1.47.1" }
futures = { version = "0.3.31" }
salvo = { version = "0.94.0" }
const-str = { version = "1.1.0" }
convert_case = { version = "0.11.0" }

puniyu_core = { version = "0.9.5", path = "./crates/puniyu_core" }
puniyu_logger = { version = "0.7.5" }

puniyu_contact = { version = "0.9.5", path = "./crates/puniyu_contact" }
puniyu_sender = { version = "0.9.5", path = "./crates/puniyu_sender" }
puniyu_element = { version = "0.9.5", path = "./crates/puniyu_element" }
puniyu_message = { version = "0.9.5", path = "./crates/puniyu_message" }
puniyu_account = { version = "0.9.5", path = "./crates/puniyu_account" }
puniyu_bot = { version = "0.9.5", path = "./crates/puniyu_bot" }
puniyu_api = { version = "0.9.5", path = "./crates/puniyu_api" }
puniyu_app = { version = "0.9.5", path = "./crates/puniyu_app" }
puniyu_path = { version = "0.9.5", path = "./crates/puniyu_path" }
puniyu_event = { version = "0.9.5", path = "./crates/puniyu_event" }
puniyu_context = { version = "0.9.5", path = "./crates/puniyu_context" }
puniyu_error = { version = "0.9.5", path = "./crates/puniyu_error" }
puniyu_version = { version = "0.9.5", path = "./crates/puniyu_version" }
puniyu_config = { version = "0.9.5", path = "./crates/puniyu_config" }
puniyu_task = { version = "0.9.5", path = "./crates/puniyu_task" }

puniyu_server = { version = "0.9.5", path = "./crates/puniyu_server" }
puniyu_server_middleware = { version = "0.9.5", path = "./crates/puniyu_server_middleware" }
puniyu_server_router = { version = "0.9.5", path = "./crates/puniyu_server_router" }

puniyu_handler = { version = "0.9.5", path = "./crates/puniyu_handler" }
puniyu_dispatch = { version = "0.9.5", path = "./crates/puniyu_dispatch" }
puniyu_handler_log = { version = "0.9.5", path = "./handlers/puniyu_handler_log" }
puniyu_handler_access = { version = "0.9.5", path = "./handlers/puniyu_handler_access" }
puniyu_handler_command = { version = "0.9.5", path = "./handlers/puniyu_handler_command" }

puniyu_loader = { version = "0.9.5", path = "./crates/puniyu_loader" }

puniyu_adapter_types = { version = "0.9.5", path = "./crates/puniyu_adapter_types" }
puniyu_adapter_api = { version = "0.9.5", path = "./crates/puniyu_adapter_api" }
puniyu_adapter_core = { version = "0.9.5", path = "./crates/puniyu_adapter_core" }

puniyu_command_types = { version = "0.9.5", path = "./crates/puniyu_command_types" }
puniyu_command = { version = "0.9.5", path = "./crates/puniyu_command" }
puniyu_command_parser = { version = "0.9.5", path = "./crates/puniyu_command_parser" }

puniyu_plugin_core = { version = "0.9.5", path = "./crates/puniyu_plugin_core" }

puniyu = { version = "0.9.5", path = "./crates/puniyu" }
puniyu_cooldown = { version = "0.9.5", path = "./crates/puniyu_cooldown" }
# puniyu_macros = { version = "0.9.0", path = "./crates/puniyu_macros" }


[profile.release]
lto = "fat"
opt-level = "z"
incremental = false

[profile.dev]
lto = false
opt-level = 1
incremental = true
