[package]
name = "punicore_core"
version = "0.1.0"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
punicore_logger = { path = "../punicore_logger" }
tracing = { version = "0.1.41" }

[lints]
workspace = true
