[package]
name = "punicore_utils"
version = "0.1.0"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
sysinfo = "0.37.0"
once_cell = "1.21.3"
rust_decimal = "1.37.2"

[lints]
workspace = true
