[package]
name = "punicore_utils"
version = "0.1.0"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
sysinfo = { version = "0.37.0" }
once_cell = { version = "1.21.3" }
rust_decimal = { version = "1.37.2" }
tokio = { version = "1.47.1", features = ["full"] }
features = "0.10.0"

[lints]
workspace = true
