[package]
name = "puniyu"
version = "0.8.7"
publish = false
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "puniyu"
path = "src/main.rs"

[dependencies]
bytes.workspace = true

figlet-rs = { version = "1.0.0" }
convert_case = { version = "0.11.0" }
const-str = { version = "1.1.0" }

puniyu_core = { version = "0.8.4" }
puniyu_version = { version = "0.8.1" }
puniyu_adapter_console = { version = "0.8.0" }
puniyu_handler_command = { version = "0.8.4", path = "../crates/puniyu_handler_command" }
puniyu_plugin_basic = { version = "0.8.0" }
tokio = { workspace = true, features = ["macros"] }

[build-dependencies]
cargo_metadata = { version = "0.23.1", features = ["builder"] }
vergen-git2 = { version = "9.1.0", features = ["build"] }
