[package]
name = "puniyu"
version = "0.9.0"
description = "puniyu"
publish = false
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "puniyu"
path = "src/main.rs"

[dependencies]
serde.workspace = true
bytes.workspace = true
smol_str.workspace = true

puniyu_core.workspace = true
puniyu_logger.workspace = true

puniyu_adapter_console = { version = "0.8.4" }
puniyu_handler_command = { version = "0.10.0", path = "../crates/puniyu_handler_command" }
puniyu_plugin_basic = { version = "0.8.3" }
puniyu_common = { version = "0.9.0" }
puniyu_loader_builtin = { version = "0.9.0" }
puniyu_plugin_echo = { version = "0.1.3" }

tokio = { workspace = true, features = ["macros"] }

figlet-rs = { version = "1.0.0" }
convert_case = { version = "0.11.0" }
const-str = { version = "1.1.0" }


[build-dependencies]
vergen-git2 = { version = "10.0.0", features = ["build"] }
