[package]
name = "puniyu_adapter"
version = "0.1.8"
description = "puniyu 的适配器模块"
readme = "README.md"
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
puniyu_logger.workspace = true
serde_json.workspace = true

puniyu_macros = { workspace = true, features = ["adapter"] }
puniyu_bot = { workspace = true }
puniyu_element = { workspace = true }
puniyu_event = { workspace = true, features = ["message"] }
puniyu_event_bus = { workspace = true }
puniyu_common = { workspace = true }
puniyu_builder = { workspace = true, features = ["adapter"] }
puniyu_contact = { workspace = true }
puniyu_sender = { workspace = true }
puniyu_adapter_api = { workspace = true }
