[package]
name = "puniyu_binaries"
version = "0.9.5"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "puniyu"
path = "src/main.rs"

[dependencies]
bytes.workspace = true
semver.workspace = true
convert_case.workspace = true
salvo.workspace = true

tokio = { workspace = true, features = ["full"] }

figlet-rs = { version = "1.0.0" }

puniyu_version.workspace = true
puniyu.workspace = true
puniyu_path.workspace = true
puniyu_logger.workspace = true
puniyu_server.workspace = true
puniyu_server_middleware.workspace = true
puniyu_server_router.workspace = true
puniyu_handler_log.workspace = true
puniyu_handler_access.workspace = true
puniyu_handler_command.workspace = true

[build-dependencies]
vergen-git2 = { version = "10.0.0", features = ["build"] }
