[package]
name = "puniyu_binaries"
version = "0.9.5"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "puniyu"
path = "src/main.rs"


[dependencies]
log.workspace = true
bytes.workspace = true
semver.workspace = true
convert_case.workspace = true

tokio = { workspace = true, features = ["full"] }
figlet-rs = { version = "1.0.0" }

puniyu_app.workspace = true
puniyu_config.workspace = true
puniyu_version.workspace = true
puniyu.workspace = true
puniyu_path.workspace = true
puniyu_logger.workspace = true

puniyu_loader_builtin.workspace = true

puniyu_plugin_access.workspace = true
puniyu_plugin_command.workspace = true
puniyu_plugin_event.workspace = true
puniyu_plugin_task.workspace = true
puniyu_plugin_server.workspace = true
puniyu_plugin_logo.workspace = true

[build-dependencies]
vergen-git2 = { version = "10.0.0", features = ["build"] }
