[package]
name = "puniyu_core"
version = "0.1.0"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
notify = "8.2.0"
figlet-rs = "0.1.5"

serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
async-trait.workspace = true
inventory.workspace = true
puniyu_server.workspace = true
puniyu_logger.workspace = true
convert_case.workspace = true


puniyu_bot = { path = "../crates/puniyu_bot" }
puniyu_plugin_builder = { path = "../crates/puniyu_plugin_builder" }
puniyu_plugin_registry = { path = "../crates/puniyu_plugin_registry" }
puniyu_adapter_builder = { path = "../crates/puniyu_adapter_builder" }
puniyu_adapter_registry = { path = "../crates/puniyu_adapter_registry" }
puniyu_task_registry = { path = "../crates/puniyu_task_registry" }
puniyu_utils = { path = "../crates/puniyu_utils" }
puniyu_event_bus = { path = "../crates/puniyu_event_bus" }


[build-dependencies]
puniyu_build = { path = "../puniyu_build", version = "0.1.0" }

[features]
default = ["server"]
server = []
core_preview = ["puniyu_build/core_preview"]
