[package]
name = "puniyu_core"
version = "0.2.0"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
figlet-rs = "0.1.5"
glob = "0.3.3"

thiserror.workspace = true
tokio.workspace = true
async-trait.workspace = true
inventory.workspace = true
puniyu_logger.workspace = true
convert_case.workspace = true

puniyu_config = { version = "0.1.0", path = "../crates/puniyu_config" }
puniyu_bot = { version = "0.1.0", path = "../crates/puniyu_bot" }
puniyu_task = { version = "0.1.0", path = "../crates/puniyu_task" }
puniyu_server = { version = "0.1.0", path = "../crates/puniyu_server" }
puniyu_builder = { version = "0.1.0", path = "../crates/puniyu_builder", features = ["plugin"] }
puniyu_registry = { version = "0.1.0", path = "../crates/puniyu_registry", features = ["plugin", "adapter"] }
puniyu_common = { path = "../crates/puniyu_common" }
puniyu_event_bus = { path = "../crates/puniyu_event_bus" }



[build-dependencies]
puniyu_build = { path = "../puniyu_build", version = "0.1.0" }

[features]
default = ["server"]
server = []
core_preview = ["puniyu_build/core_preview"]
