[package]
name = "puniyu_core"
version = "0.1.1"
description = "puniyu 的核心模块，包含基础设施和通用功能"
readme = "README.md"
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
figlet-rs = "0.1.5"
glob = "0.3.3"

thiserror.workspace = true
tokio.workspace = true
async-trait.workspace = true
inventory.workspace = true
puniyu_logger.workspace = true
convert_case.workspace = true

puniyu_config = { workspace = true }
puniyu_bot = { workspace = true }
puniyu_task = { workspace = true }
puniyu_server = { workspace = true }
puniyu_builder = { workspace = true, features = ["plugin"] }
puniyu_registry = { workspace = true, features = ["plugin", "adapter"] }
puniyu_common = { workspace = true }
puniyu_event_bus = { workspace = true }



[build-dependencies]
puniyu_build = { path = "../puniyu_build", version = "0.1.0" }

[features]
default = ["server"]
server = []
core_preview = ["puniyu_build/core_preview"]
