[package]
name = "puniyu_logger"
version = "0.1.0"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
chrono = { workspace = true }
tracing-appender = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = ["chrono"] }
tracing = { version = "0.1.41" }
owo-colors = { version = "4.2"}
tracing-log = { version ="0.2.0" }
chrono-tz = { version = "0.10.4" }


[lints]
workspace = true
