[package]
name = "puniyu_macro"
version = "0.1.0"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = { version = "1.0.40" }
syn = { version = "2.0.106", features = ["full"] }
regex = "1.11.2"

[lints]
workspace = true
