[package]
name = "puniyu_macro"
version = "0.1.0"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true
doctest = false

[dependencies]
quote = { version = "1.0.40" }
syn = { version = "2.0.106", features = ["full"] }
proc-macro2 = { version = "1.0.101" }
croner = { version = "3.0.0" }
convert_case = { version = "0.8.0" }


[lints]
workspace = true
