[package]
name = "puniyu_plugin"
version = "0.1.0"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
regex = "1.11.1"
log = { workspace = true }
inventory = { version = "0.3.20" }
tokio-cron-scheduler = { version = "0.14.0" }
chrono-tz = { version = "0.10.4" }

[lints]
workspace = true
