[package]
name = "puniyu_plugin"
version = "0.1.0"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
serde_json.workspace = true
inventory.workspace = true
puniyu_logger.workspace = true

puniyu_plugin_builder = { path = "../crates/puniyu_plugin_builder" }
puniyu_adapter_builder = { path = "../crates/puniyu_adapter_builder" }
puniyu_task_builder = { path = "../crates/puniyu_task_builder" }
puniyu_command_builder = { path = "../crates/puniyu_command_builder" }
puniyu_element = { path = "../crates/puniyu_element" }
puniyu_plugin_derive = { path = "../crates/puniyu_plugin_derive" }
puniyu_task_derive = { path = "../crates/puniyu_task_derive" }
puniyu_command_derive = { path = "../crates/puniyu_command_derive" }
puniyu_event_utils = { path = "../crates/puniyu_event_utils" }
puniyu_event_message = { path = "../crates/puniyu_event_message" }
puniyu_event_context = { path = "../crates/puniyu_event_context" }
puniyu_utils = { path = "../crates/puniyu_utils" }