[package]
name = "puniyu_registry"
version = "0.1.0"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
inventory = "0.3.21"
tokio = { version = "1.47.1", features = ["rt"] }
hashbrown = "0.16.0"
libloading = "0.8.8"
thiserror = { version = "2.0.16" }
serde = { version = "1.0.219", features = ["derive"] }
log = { version = "0.4.28"}
regex = "1.11.2"
futures = "0.3.31"
emitter-rs = "0.0.5"


puniyu_plugin_derive = { path = "../puniyu_derives/puniyu_plugin_derive" }
puniyu_utils = { path = "../puniyu_utils" }
puniyu_logger = { version = "0.2.2" }
tokio-cron-scheduler = "0.14.0"
chrono-tz = "0.10.4"

[lints]
workspace = true
