[package]
name = "puniyu_registry"
version = "0.1.0"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
libloading = "0.8.8"
thiserror = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }


puniyu_utils = { path = "../puniyu_utils" }
puniyu_logger = { workspace = true }

tokio-cron-scheduler = "0.15.0"
chrono-tz = "0.10.4"
uuid = { version = "1.17.0", features = ["v4"] }


