[package]
name = "puniyu_utils"
version = "0.1.0"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
puniyu_system_info = { version = "0.5.0" }
log = { workspace = true }
tokio = { workspace = true }
toml = { version = "0.9.5" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { version = "0.9.34" }
regex = "1.11.1"
handlebars = "6.3.2"
puniyu_logger = { version = "0.2.1" }
thiserror = "2.0.16"

