[package]
name = "puniyu_utils"
version = "0.1.0"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true }
toml = { version = "0.9.5" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "2.0.16"

puniyu_system_info = { workspace = true }

