[package]
name = "puniyu_utils"
version = "0.1.0"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
toml = { version = "0.9.5" }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true }
puniyu_logger = { workspace = true }

puniyu_system_info = { version = "0.5.7" }

