[package]
name = "puniyu_adapter_console"
version = "0.2.13"
description = "puniyu的控制台适配器"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
async-trait.workspace = true
rand = "0.9.2"
puniyu_adapter = { version = "0.5.12", path = "../../packages/puniyu_adapter" }
puniyu_core = { version = "0.5.12", path = "../../packages/puniyu_core" }
puniyu_common = { version = "0.5.12", path = "../../crates/puniyu_common" }
