[package]
name = "puniyu_adapter_console"
version = "0.4.6"
description = "puniyu的控制台适配器"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
puniyu_adapter_api.workspace = true
rand = "0.10.0"
