[package]
name = "puniyu_adapter_console"
version = "0.8.0"
description = "puniyu的控制台适配器"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
log.workspace = true
async-trait.workspace = true
bytes.workspace = true
puniyu_account.workspace = true
puniyu_runtime.workspace = true
puniyu_adapter.workspace = true
tokio = { version = "1", features = ["signal", "sync"] }
rand = "0.10.0"


