[package]
name = "puniyu_adapter_server"
version = "0.3.0"
description = "puniyu的server适配器"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
thiserror.workspace = true
prost.workspace = true
actix-web.workspace = true
async-trait.workspace = true
tokio.workspace = true
puniyu_adapter = { version = "0.6.0", path = "../../packages/puniyu_adapter" }
puniyu_core = { version = "0.6.0", path = "../../packages/puniyu_core" }
puniyu_protocol = { version = "0.1.0", path = "../../packages/puniyu_protocol" }
futures-util = "0.3.31"
actix-ws = "0.3.0"

