[package]
name = "puniyu_adapter_server"
version = "0.3.6"
description = "puniyu的server适配器"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
thiserror.workspace = true
prost.workspace = true
actix-web.workspace = true
async-trait.workspace = true
tokio.workspace = true
puniyu_adapter.workspace = true
puniyu_core.workspace = true
puniyu_probuff = { version = "0.2.4", path = "../../packages/puniyu_probuff" }
futures-util = "0.3.31"
actix-ws = "0.3.0"
dashmap = "6.1.0"

