[package]
name = "puniyu"
version = "0.9.5"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
log.workspace = true
convert_case.workspace = true
async-trait.workspace = true
bon.workspace = true
bytes.workspace = true
semver.workspace = true
tokio.workspace = true

salvo = { workspace = true, optional = true }

puniyu_logger.workspace = true
puniyu_app.workspace = true
puniyu_version.workspace = true
puniyu_config.workspace = true
puniyu_handler.workspace = true
puniyu_loader.workspace = true
puniyu_path.workspace = true
puniyu_plugin_core.workspace = true
puniyu_adapter_core.workspace = true
puniyu_command.workspace = true
puniyu_dispatch.workspace = true
puniyu_task.workspace = true
puniyu_error.workspace = true

puniyu_server = { workspace = true, optional = true }
puniyu_server_router = { workspace = true, optional = true }

[features]
default = ["server"]
server = ["dep:salvo", "dep:puniyu_server", "dep:puniyu_server_router"]
