[package]
name = "puniyu"
version = "0.9.5"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
log.workspace = true
convert_case.workspace = true
bon.workspace = true
tokio = { workspace = true, features = ["rt", "signal"] }

puniyu_logger.workspace = true
puniyu_context.workspace = true
puniyu_loader.workspace = true
puniyu_plugin_core.workspace = true
puniyu_adapter_core.workspace = true
