[package]
name = "puniyu_account"
version = "0.7.8"
description = "puniyu 账户信息定义库，提供机器人账户信息的类型系统"
authors.workspace = true
license.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
bytes.workspace = true
derive_builder.workspace = true

[dev-dependencies]
serde_json.workspace = true
