[package]
name = "puniyu_account"
version = "0.8.0"
description = "puniyu 账户信息类型库，统一机器人账户信息模型"
authors.workspace = true
license.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
bytes.workspace = true
bon.workspace = true

[dev-dependencies]
serde_json.workspace = true
