[package]
name = "puniyu_account"
version = "0.9.5"
authors.workspace = true
license.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
bon.workspace = true
smol_str.workspace = true

bytes = { workspace = true, features = ["serde"] }

[dev-dependencies]
serde_json.workspace = true
