[package]
name = "puniyu_adapter"
version = "0.8.0"
description = "Puniyu 适配器库，提供适配器的统一接口定义和注册管理"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
toml.workspace = true
puniyu_macros.workspace = true
puniyu_api.workspace = true
puniyu_error.workspace = true
puniyu_version.workspace = true
puniyu_bot.workspace = true
puniyu_adapter_core.workspace = true
puniyu_adapter_api.workspace = true
puniyu_adapter_types.workspace = true
puniyu_config.workspace = true
puniyu_hook.workspace = true
puniyu_server.workspace = true
actix-web.workspace = true
puniyu_sender.workspace = true
puniyu_contact.workspace = true
puniyu_segment.workspace = true
puniyu_message.workspace = true
puniyu_account.workspace = true
puniyu_event.workspace = true
puniyu_dispatch.workspace = true
