[package]
name = "puniyu_adapter"
version = "0.9.0"
description = "Puniyu 适配器库，提供适配器的统一接口定义和注册管理"
authors.workspace = true
license.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
smol_str.workspace = true
puniyu_core.workspace = true
puniyu_macros.workspace = true
