[package]
name = "puniyu_adapter_api"
version = "0.7.8"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
derive_builder.workspace = true

puniyu_adapter_types.workspace = true
puniyu_contact.workspace = true
puniyu_message.workspace = true
puniyu_error.workspace = true

