[package]
name = "puniyu_adapter_builder"
version = "0.1.0"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
strum.workspace = true
puniyu_event_utils = { path = "../puniyu_event_utils" }
puniyu_element = { path = "../puniyu_element" }